# cluster-provisioner

./: .gitignore  Dockerfile  README.md  azure_key.json  gcp_key.json  pyproject.toml  requirement.txt  ruff.toml  startup.sh  test.db
alembic/: __init__.py  env.py
alembic/versions/: 21717de76992_.py  88e6ae54e05a_.py
backend/: __main__.py  app.py  log.py  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 0630acf9e008_.py  08eb869f137b_.py  0e10260ae036_.py  1264531da6ae_.py  243ae8c87d8c_.py  3b3d2cb15ad7_.py  3b48001b12be_initial_migration.py  5552c06660dd_.py  56944b9d876c_.py  6ad66ca283b5_.py  6fc719dcdf94_.py  81b8c707543f_.py  85a4e4bbfecd_.py  c9a25625647a_.py  d3564dd08939_.py  d7a9e1a89d58_.py
backend/api/: router.py
backend/api/azure/: __init__.py  azure.py
backend/api/common/: __init__.py  common.py
backend/api/gcp/: __init__.py  gcp.py
backend/db/: connection.py  dao.py  dependency.py
backend/db/models/: __init__.py  model.py
backend/schema/: __init__.py  schema.py
backend/utils/: __init__.py  utility.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/confirmation/: index.tsx
frontend/src/components/form/: Select.tsx
frontend/src/components/header/: Header.tsx  UserDropdown.tsx
frontend/src/components/loader/: index.tsx
frontend/src/icons/: index.ts
frontend/src/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx
frontend/src/pages/Dashboard/: Home.tsx
frontend/src/services/: index.tsx
infra/azure/: main.tf  variables.tf
infra/gcp/: main.tf  variables.tf
(+18 files in other folders)
