[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Joel Dsouza"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic[email] (>=2.11.3,<3.0.0)",
    "pydantic-core (>=2.33.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "azure-common (>=1.1.28,<2.0.0)",
    "azure-core (>=1.33.0,<2.0.0)",
    "azure-identity (>=1.21.0,<2.0.0)",
    "azure-mgmt-containerservice (>=34.2.0,<35.0.0)",
    "azure-mgmt-core (>=1.5.0,<2.0.0)",
    "google-api-core (>=2.24.2,<3.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "google-cloud-compute (>=1.29.0,<2.0.0)",
    "google-cloud-container (>=2.56.1,<3.0.0)",
    "googleapis-common-protos (>=1.69.2,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "yarl (>=1.19.0,<2.0.0)",
    "importlib (>=1.0.4,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "ujson (>=5.10.0,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
